# conciousness-loop-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: docker-build.yml
deploy/: .env.example  deploy.yaml
src/: claude_loop.py  core.py  entrypoint.sh  executors.py  input_handler.py  run.py  server.py
